# sideband

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  flake.nix  justfile  mkdocs.yml  sideband.cabal
.github/workflows/: ci.yml  darwin-release.yml  deploy-docs.yml  release-plan.yml  release.yml  sync-cabal-version.yml
app/: Main.hs
docs/: architecture.md  index.md  installation.md  philosophy.md  usage.md
nix/: home-module.nix  linux-artifact-smoke.nix  linux-release.nix  module.nix  project.nix
scripts/release/: check-version-consistency  extract-notes  get-cabal-version  plan
skills/telegram/: SKILL.md
skills/telegram/scripts/: go-mobile  liaison  mux  mux-selftest
skills/telegram/scripts/mux-backends/: EXAMPLE  README.md  tmux
src/Sideband/: Commands.hs  Config.hs  Daemon.hs  Route.hs  Spool.hs  Telegram.hs
test/Sideband/: ConfigSpec.hs  RouteSpec.hs
