cabal-version:   3.0
name:            sideband
version:         0.1.2.0
synopsis:        Telegram side channel for unattended coding agents
description:
  One bot, one forum group, many agents. @tg@ lets a coding agent send
  tagged notifications, ask blocking questions, and receive routed
  replies (text or transcribed voice) through per-agent Telegram forum
  topics, with a single hub daemon owning the inbound direction.

homepage:        https://github.com/paolino/sideband
bug-reports:     https://github.com/paolino/sideband/issues
license:         MIT
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Network
build-type:      Simple
extra-doc-files: README.md
tested-with:     GHC ==9.12.3

source-repository head
  type:     git
  location: https://github.com/paolino/sideband

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

common extensions
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications

library
  import:           warnings, extensions
  exposed-modules:
    Sideband.Commands
    Sideband.Config
    Sideband.Daemon
    Sideband.Route
    Sideband.Spool
    Sideband.Telegram

  hs-source-dirs:   src
  build-depends:
    , aeson                 >=2.1  && <2.3
    , base                  >=4.18 && <5
    , bytestring            >=0.11 && <0.13
    , directory             >=1.3  && <1.4
    , filepath              >=1.4  && <1.6
    , http-client           >=0.7  && <0.8
    , http-client-tls       >=0.3  && <0.4
    , process               >=1.6  && <1.7
    , text                  >=2.0  && <2.2
    , time                  >=1.12 && <1.15
    , unix                  >=2.8  && <2.9

  default-language: Haskell2010

executable tg
  import:           warnings, extensions
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base
    , optparse-applicative  >=0.18 && <0.20
    , sideband
    , text

  default-language: Haskell2010

test-suite unit
  import:           warnings, extensions
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Sideband.ConfigSpec
    Sideband.RouteSpec

  hs-source-dirs:   test
  build-depends:
    , base
    , hspec       >=2.11 && <2.12
    , sideband

  build-tool-depends: hspec-discover:hspec-discover
  default-language:   Haskell2010
